--- a/index.html
+++ b/index.html
@@ -55,10 +55,10 @@
 <body>
 
     <h1>Domains for sale</h1>
-    <img src="investmentalgo.com/email.png">
+    <img src="https://investmentalgo.com/email.png">
     
     <ul>
-        <li><a href="investmentalgo.com">investmentalgo.com</a></li>
+        <li><a href="https://investmentalgo.com">investmentalgo.com</a></li>
         <li><a href="investmentmotor.com">investmentmotor.com</a></li>
         <li><a href="turbojetx.com">turbojetx.com</a></li>
     </ul>
