--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     
     <ul>
         <li><a href="https://investmentalgo.com">investmentalgo.com</a></li>
-        <li><a href="investmentmotor.com">investmentmotor.com</a></li>
-        <li><a href="turbojetx.com">turbojetx.com</a></li>
+        <li><a href="http://investmentmotor.com">investmentmotor.com</a></li>
+        <li><a href="http://turbojetx.com">turbojetx.com</a></li>
     </ul>
 
 </body>
