--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
     <ul>
         <li><a href="https://investmentalgo.com">investmentalgo.com</a></li>
         <li><a href="http://investmentmotor.com">investmentmotor.com</a></li>
+        <li><a href="http://tinypassword.com">tinypassword.com</a></li>
         <li><a href="http://turbojetx.com">turbojetx.com</a></li>
     </ul>
 
