--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
     <img src="https://investmentalgo.com/email.png">
     
     <ul>
-        <li><a href="https://investmentalgo.com">investmentalgo.com</a></li>
+        <li><a href="https://asymptotique.com">asymptotique.com</a></li>
         <li><a href="http://investmentmotor.com">investmentmotor.com</a></li>
         <li><a href="http://ovrft.com">ovrft.com</a></li>
         <li><a href="http://tinypassword.com">tinypassword.com</a></li>
